# mercadoBTCUtils

./: README.md  requirements.txt  setup.cfg  setup.py
src/: sample_config.ini
src/mercadoBTCUtils/: __init__.py
src/mercadoBTCUtils/analyzer/: __init__.py  public.py
src/mercadoBTCUtils/trading/: __init__.py  common.py
src/mercadobtc_utils/analyzer/: __init__.py  public.py
src/mercadobtc_utils/trading/: common.py
