[metadata]
name = mercadoBTCUtils
version = 1.0b0.dev0
author = Mateus Interciso
author_email = minterciso@gmail.com
description = A suite of tools to control the Mercado Bitcoin APIs. Also some very simple ML analysis.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/minterciso/mercadoBTCUtils
project_urls =
    Bug Tracker = https://github.com/minterciso/mercadoBTCUtils/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src